--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Mobile Phone number generator: Saudi, UAE, KW, BH, QA, OM",
   "main": "index.ts",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "semantic-release": "semantic-release",
+    "build": "tsc"
   },
   "keywords": [
     "phone-number",
@@ -22,5 +24,6 @@
     "semantic-release": "^19.0.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.3.5"
-  }
+  },
+  "files": ["index.ts", "README.md"]
 }
