--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Run Tests And Publishment
 
 on: [push]
 
@@ -30,6 +30,7 @@ jobs:
         with:
           node-version: 14
           registry-url: https://registry.npmjs.org/
+      - run: npm i
       - run: npm run build
       - run: npx semantic-release
         env:
