--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -1,4 +1,4 @@
-name: Run Tests And Publishment
+name: Run Tests
 
 on: [push]
 
@@ -20,19 +20,3 @@ jobs:
       - run: npm i
       - run: npm run test
 
-
-  publish-npm:
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14
-          registry-url: https://registry.npmjs.org/
-      - run: npm i
-      - run: npm run build
-      - run: npx semantic-release
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
