--- a/.github/workflows/publishment.yaml
+++ b/.github/workflows/publishment.yaml
@@ -10,12 +10,14 @@ jobs:
   publish-npm:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: 14
+          registry-url: https://registry.npmjs.org/
       - run: npm i
-      - uses: JS-DevTools/npm-publish@v1
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
-
+      - run: npm run build
+      - run: npx semantic-release
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
