--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phone-number-generator",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "Mobile Phone number generator: Saudi, UAE, KW, BH, QA, OM",
   "main": "index.js",
   "scripts": {
@@ -25,5 +25,12 @@
     "ts-jest": "^26.4.4",
     "typescript": "^4.3.5"
   },
-  "files": ["index.ts", "README.md"]
+  "files": [
+    "index.ts",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PeterNgTr/phone-number-generator.git"
+  }
 }
