fix: release proper files

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "typescript": "^4.3.5"
   },
   "files": [
-    "dist/*",
+    "index.d.ts",
+    "index.js",
     "README.md"
   ],
   "repository": {
