--- a/.github/workflows/publishment.yaml
+++ b/.github/workflows/publishment.yaml
@@ -1,4 +1,4 @@
-name: My deploy workflow
+name: Package publish
 
 on:
   workflow_run:
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: 16
           registry-url: https://registry.npmjs.org/
       - run: npm i
       - run: npm run build
