--- a/package.json
+++ b/package.json
@@ -1,38 +1,44 @@
 {
   "name": "phone-number-generator",
   "version": "1.0.1",
-  "description": "Mobile Phone number generator: Saudi, UAE, KW, BH, QA, OM",
+  "description": "Mobile Phone number generator: GE, SA, UAE, KW, BH, QA, OM",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "semantic-release": "semantic-release",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "rome check src",
+    "format": "rome format src --write"
   },
   "keywords": [
     "phone-number",
     "phone-number-generator"
   ],
-  "author": "PeterNgTr",
+  "author": "kobenguyent",
   "license": "ISC",
   "dependencies": {
-    "expect": "^28.1.3",
-    "ts-node": "^9.0.0"
+    "expect": "^28.1.3"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.5",
+    "@types/jest": "^28.1.8",
     "jest": "26.6.3",
     "semantic-release": "^19.0.3",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.3.5"
+    "ts-node": "^9.0.0",
+    "typescript": "^4.3.5",
+    "rome": "^12.0.0"
   },
   "files": [
-    "index.d.ts",
-    "index.js",
+    "dist/*",
     "README.md"
   ],
   "repository": {
     "type": "git",
     "url": "https://github.com/PeterNgTr/phone-number-generator.git"
   },
-  "release": { "branches": [ "main" ] }
+  "release": {
+    "branches": [
+      "main"
+    ]
+  }
 }
