--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,12 @@
     "strictNullChecks": false,
     "types": ["jest", "node"],
     "declaration": true,
-    "outDir": "./",
+    "outDir": "./dist",
     "baseUrl": "./",
+    "rootDir": "./src",
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "index.spec.ts"]
+  "exclude": ["node_modules",
+    "__tests__/index.spec.ts", "dist"
+  ]
 }
